--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -95,7 +95,7 @@ DashboardScreen As screen:
                 Size: |
                     =//21.36
                     If(Parent.Width<500,14,Parent.Width>500,20)
-                Text: ="Technician"
+                Text: ="Technician Dashboard"
                 Width: =Parent.Width-imgSchindlerLogoDS.Width-IconMenuDS.Width-btnUsernameDS.Width-10
                 X: =96.12
                 ZIndex: =4
