--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -810,7 +810,7 @@ QuotedSOldLeads As screen:
                     FocusedBorderThickness: =2
                     Font: =Font.Arial
                     Height: =If(Parent.Width>800,40,60)
-                    HintText: ="Search leads by  tracking number or contract number or building name or address or zipcode "
+                    HintText: ="Search leads by tracking number, contract number, building name, address or zip code "
                     HoverBorderColor: =RGBA(255, 0, 0, 1)
                     HoverFill: =RGBA(0, 0, 0, 0)
                     LayoutMinHeight: =70
@@ -868,7 +868,7 @@ QuotedSOldLeads As screen:
                     Font: =Font.Arial
                     FontWeight: =FontWeight.Semibold
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
-                    Text: ="Sort by column"
+                    Text: ="Sort by"
                     Width: |-
                         =//If(Parent.Width>500,Parent.Width/2.4,Parent.Width/3)
                         Parent.Width-cboxSortSoldLeads.Width-iconSortSoldLeads.Width-20
@@ -889,7 +889,7 @@ QuotedSOldLeads As screen:
                     IsSearchable: =false
                     Items: |-
                         =
-                        ["Created Date","Contract number","Lead Tracking No.","Building Name","Address","Status Date"]
+                        ["Created Date","Contract Number","Lead Tracking No.","Building Name","Address","Status Date"]
                     OnChange: |-
                         =UpdateContext({locInfoExpanded:true})
                     PressedColor: =RGBA(0, 0, 0, 1)
