--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -341,7 +341,7 @@ RejectedLeads As screen:
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
-                        ="<b>Building name : </b>" &  ThisItem.'BuildingName '
+                        ="<b>Building Name: </b>" &  ThisItem.'BuildingName '
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -357,7 +357,7 @@ RejectedLeads As screen:
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
-                        ="<b>Tracking number : </b>" &  ThisItem.LeadTrackingNumber
+                        ="<b>Tracking Number: </b>" &  ThisItem.LeadTrackingNumber
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -374,7 +374,7 @@ RejectedLeads As screen:
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
-                        ="<b>Address : </b>" & ThisItem.Address
+                        ="<b>Address: </b>" & ThisItem.Address
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -390,7 +390,7 @@ RejectedLeads As screen:
                     Font: =Font.Arial
                     Height: =0
                     HtmlText: |-
-                        ="<b>Zipcode : </b>" & ThisItem.'ZipCode '
+                        ="<b>Zipcode: </b>" & ThisItem.'ZipCode '
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -408,7 +408,7 @@ RejectedLeads As screen:
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
-                        ="<b>Date created : </b>" & Text(ThisItem.'Created On',"yyyy/mm/dd hh:mm AM/PM")
+                        ="<b>Date Created: </b>" & Text(ThisItem.'Created On',"yyyy/mm/dd hh:mm AM/PM")
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -457,7 +457,7 @@ RejectedLeads As screen:
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
-                        ="<b>Contract number : </b>" &  ThisItem.'ContractNumber '
+                        ="<b>Contract Number: </b>" &  ThisItem.'ContractNumber '
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -474,7 +474,7 @@ RejectedLeads As screen:
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
-                        ="<b>QQ Team member  : </b>" & ThisItem.QQTeamName
+                        ="<b>QQ Team Member: </b>" & ThisItem.QQTeamName
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -491,7 +491,7 @@ RejectedLeads As screen:
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
-                        ="<b>Lead Comment  : </b>" & ThisItem.LeadComment
+                        ="<b>Lead Comment: </b>" & ThisItem.LeadComment
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
@@ -508,7 +508,7 @@ RejectedLeads As screen:
                     Font: =Font.Arial
                     Height: =20
                     HtmlText: |-
-                        ="<b>Rejected Date : </b>" & Text(ThisItem.StatusDate,"yyyy/mm/dd hh:mm AM/PM")
+                        ="<b>Rejected Date: </b>" & Text(ThisItem.StatusDate,"yyyy/mm/dd hh:mm AM/PM")
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingLeft: =0
