--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -194,7 +194,9 @@ QuotedSOldLeads As screen:
                     Align: =Align.Center
                     AutoHeight: =true
                     Color: =RGBA(255, 0, 0, 1)
-                    FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                    FontWeight: |-
+                        =//If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                        FontWeight.Normal
                     Height: =30
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
@@ -602,7 +604,9 @@ QuotedSOldLeads As screen:
                     Align: =Align.Center
                     AutoHeight: =true
                     Font: =Font.Arial
-                    FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                    FontWeight: |-
+                        =//If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                        FontWeight.Normal
                     Height: =30
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
@@ -620,7 +624,9 @@ QuotedSOldLeads As screen:
                     Align: =Align.Center
                     Color: =RGBA(255, 0, 0, 1)
                     Font: =Font.Arial
-                    FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                    FontWeight: |-
+                        =//If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                        FontWeight.Normal
                     Height: |-
                         =//30
                         30
@@ -641,7 +647,9 @@ QuotedSOldLeads As screen:
                     Align: =Align.Center
                     AutoHeight: =true
                     Font: =Font.Arial
-                    FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                    FontWeight: |-
+                        =//If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                        FontWeight.Normal
                     Height: |-
                         =//Self.Size * 1.8
                         30
@@ -662,7 +670,9 @@ QuotedSOldLeads As screen:
                     Align: =Align.Center
                     Color: =RGBA(255, 0, 0, 1)
                     Font: =Font.Arial
-                    FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                    FontWeight: |-
+                        =//If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                        FontWeight.Normal
                     Height: =30
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
@@ -701,7 +711,9 @@ QuotedSOldLeads As screen:
                     Align: =Align.Center
                     AutoHeight: =true
                     Font: =Font.Arial
-                    FontWeight: =If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                    FontWeight: |-
+                        =//If(ThisItem.IsSelected, FontWeight.Semibold, FontWeight.Normal)
+                        FontWeight.Normal
                     Height: =30
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
